--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "wouter": "^2.5.3"
   },
   "scripts": {
+    "deploy": "npm run test && vercel", 
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
