--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4",
     "wouter": "^2.5.3"
   },
   "scripts": {
-    "deploy": "npm run test && vercel", 
+    "deploy": "npm run test && vercel",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
